--- a/index.html
+++ b/index.html
@@ -81,32 +81,32 @@
 								<li class="icon fa-paper-plane">
 									<h3>Fake News</h3>
                   <p>Built a Google Chrome Extension at BostonHacks that analyzes the authenticity of a news article.</p>
-                  <a href="/fakenews/" class="button fit">View Project</a>
+                  <a href="/static/fakenews.html" class="button fit">View Project</a>
 								</li>
 								<li class="icon solid fa-laptop">
 									<h3>Agriworks</h3>
                   <p>Developing a web application that will mitigate the agrarian resource crisis in India</p>
-                  <a href="/agriworks/" class="button fit">View Project</a>
+                  <a href="/static/agriworks.html" class="button fit">View Project</a>
 								</li>
 								<li class="icon solid fa-code">
 									<h3>YelpCamp</h3>
                   <p>A NodeJS application that allows users to rate, share, and purchase custom campgrounds</p>
-                  <a href="/yelpcamp/" class="button fit">View Project</a>
+                  <a href="/static/yelpcamp.html" class="button fit">View Project</a>
 								</li>
 								<li class="icon solid fa-headphones-alt">
 									<h3>SilentParty</h3>
                   <p>An iOS application that synchronizes music to create a party atmosphere for users.</p>
-                  <a href="/silentparty/" class="button fit">View Project</a>
+                  <a href="/static/silentparty.html" class="button fit">View Project</a>
 								</li>
 								<li class="icon fa-heart">
 									<h3>MuchToDo</h3>
                   <p>An iOS application that customizes a users reminders.</p>
-                  <a href="/muchtodo/" class="button fit">View Project</a>
+                  <a href="/static/muchtodo.html" class="button fit">View Project</a>
 								</li>
 								<li class="icon fa-flag">
 									<h3>QuickStop</h3>
                   <p>A web application that optimizes users traveling in Boston.</p>
-                  <a href="/quickstop/" class="button fit">View Project</a>
+                  <a href="/static/quickstop.html" class="button fit">View Project</a>
 								</li>
 							</ul>
 						</div>
