added virtualheap project

--- a/static/virtualheap.html
+++ b/static/virtualheap.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Fake News Project</title>
+		<title>VirtualHeap Project</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/public/assets/css/main.css" />
         <noscript><link rel="stylesheet" href="/public/assets/css/noscript.css" /></noscript>
         <style>
             .project-button {
-                margin-right: 2rem; 
+                margin-left: 19rem; 
                 background-color: lightgray;
             }
         </style>
@@ -41,7 +41,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Fake News Chrome Extension</h2>
+							<h2>VirtualHeap</h2>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -49,13 +49,11 @@
 								<h3>About the Project</h3>
 
                                 <p>
-                                    Fake News is a Google Chrome Browser Extension that helps check the authenticity of news articles online. Users can click the extension button to analyze the headline of the article they are viewing. <br /> <br /> 
-                                                The extension uses a Natural Language Processing Model built with Google Cloud to compare the headline to known Fake News headlines. 
-                                                It also uses a PageRank API to check the relevance of the website and offers articles from other sources relating to the keywords of the headline. 
+                                        VirtualHeap is a dynamic memory allocator in C that completes Malloc, Free, VMalloc, VFree requests.  VMalloc/VFree use a redirection table to perform compaction which minimizes fragmentation.
+                                        It also incorporates a HeapChecker to allow user to see current memory usage at runtime. 
                                 </p>
-                                <a href="https://devpost.com/software/fakenews-chrome-plugin" target = "_blank" class="button fit project-button">View Project Demo</a>
                                 
-                                <a href="https://github.com/zachbodi/FakeNewsWebPlugin" target = "_blank" class="button fit project-button">View Code</a>
+                                <a href="https://github.com/gkang2018/HeapAllocator" target = "_blank" class="button fit project-button">View Code</a>
 
 							</div>
 						</section>
