--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                   <a href="/static/silentparty.html" class="button fit">View Project</a>
 								</li>
 								<li class="icon fa-heart">
-									<h3>MuchToDo</h3>
-                  <p>An iOS application that customizes a users reminders.</p>
-                  <a href="/static/muchtodo.html" class="button fit">View Project</a>
+									<h3>VirtualHeap</h3>
+                  <p>A C application that implementd a simple, first-fit dynamic memory management policy on an allocatable region of memory.</p>
+                  <a href="/static/virtualheap.html" class="button fit">View Project</a>
 								</li>
 								<li class="icon fa-flag">
 									<h3>QuickStop</h3>
