spelling error in virtualheap description

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 								</li>
 								<li class="icon fa-heart">
 									<h3>VirtualHeap</h3>
-                  <p>A C application that implementd a simple, first-fit dynamic memory management policy on an allocatable region of memory.</p>
+                  <p>A C application that implements a simple, first-fit dynamic memory management policy on an allocatable region of memory.</p>
                   <a href="/static/virtualheap.html" class="button fit">View Project</a>
 								</li>
 								<li class="icon fa-flag">
