fixed duplicate html

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 A React Native application that connects Latin American high
                 school students with mentors
               </p>
-              <a href="/static/scienceguide.html.html" class="button fit"
+              <a href="/static/scienceguide.html" class="button fit"
                 >View Project</a
               >
             </li>
@@ -170,7 +170,7 @@
                 An iOS application to detect potentially carcinogenic
                 ingredients in food products.
               </p>
-              <a href="/static/smartscan.html.html" class="button fit"
+              <a href="/static/smartscan.html" class="button fit"
                 >View Project</a
               >
             </li>
