update agriworks links

--- a/static/agriworks.html
+++ b/static/agriworks.html
@@ -53,8 +53,9 @@
                                         The application inputs resource datasets and uses Python pandas and several other tools to create statistical interpretations of the data. 
                                         These data models can be used by researchers, policymakers, non-profits, and citizens. The front-end is developed with VueJS and for the backend, 
                                         we decided to implement it with Flask and MongoDB. 
-                                </p>
-                                <a href="https://github.com/Hack4Impact-Boston-University/agriworks_portal" target = "_blank" class="button fit project-button">View Front-End Repo</a>
+								</p>
+								<a href="http://agri-works.org/" target = "_blank" class="button fit project-button">View Live Application</a>
+                                <a href="https://github.com/Hack4Impact-Boston-University/agriworks_platform" target = "_blank" class="button fit project-button">View Back-End Repo</a>
                                 
                                 <a href="https://github.com/Hack4Impact-Boston-University/agriworks_platform" target = "_blank" class="button fit project-button">View Back-End Repo</a>
 
