update new apps 12/16/20

--- a/index.html
+++ b/index.html
@@ -54,22 +54,17 @@
           <header class="major">
             <h2>Who am I?</h2>
             <p>
-              Hello! My name is Gagandeep Kang and I'm currently a sophomore
-              studying Computer Science and Mathematics at Boston University.
+              Hello! My name is Gagandeep Kang and I'm currently a junior
+              studying Computer Science with a minor in Mathematics from Boston University.
               <br />
               <br />
               During the school year, I have the opportunity to be a part of
               Boston University's Hack4Impact Chapter, which is an organization
-              that develops applications for non-profits in Boston. I am also
-              the treasurer of BU's Global App Initiative which is an
-              organization that builds apps for our community. This past
-              semester, I joined OpenWeb, an app incubator that brings together
-              highly motivated students to develop tech projects to collaborate,
-              design, and learn together.
+              that develops applications for non-profits in Boston. Within Hack4Impact, I co-founded the Junior Development team which provides
+              an opportunity for students who are interested in full-stack development to learn through a project-based model. I am also
+              the President of BU's Global App Initiative which builds mobile apps for non-profits in the local Boston community. 
               <br />
               <br />
-              Outside of developing, I am a judge for the Boston Debate League,
-              am a food fanatic, and love playing and watching basketball.
             </p>
           </header>
           <ul class="icons major">
@@ -144,6 +139,15 @@
                 >View Project</a
               >
             </li>
+            <li class="icon fa-money-bill-wave">
+              <h3>SpotMe</h3>
+              <p>
+                A React Native mobile application that allows users to globally trade money, improving digital transactions in India/Pakistan. 
+              </p>
+              <a href="/static/virtualheap.html" class="button fit"
+                >View Project</a
+              >
+            </li>
             <li class="icon fa-heart">
               <h3>VirtualHeap</h3>
               <p>
@@ -151,6 +155,15 @@
                 memory management policy on an allocatable region of memory.
               </p>
               <a href="/static/virtualheap.html" class="button fit"
+                >View Project</a
+              >
+            </li>
+            <li class="icon fa-business-time">
+              <h3>SafeSpot</h3>
+              <p>
+                A Vue / Flask application that suggests the perfect time for users to visit a business or venue. 
+              </p>
+              <a href="/static/safespot.html" class="button fit"
                 >View Project</a
               >
             </li>
