--- a/static/safespot.html
+++ b/static/safespot.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Agriworks Project</title>
+		<title>SafeSpot Web Application</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/public/assets/css/main.css" />
@@ -41,7 +41,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Agriworks Web Application</h2>
+							<h2>SafeSpot Web Application</h2>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -49,15 +49,12 @@
 								<h3>About the Project</h3>
 
                                 <p>
-                                        Agriworks is a web application that looks to help manage and understand agricultural resource consumption in India. 
-                                        The application inputs resource datasets and uses Python pandas and several other tools to create statistical interpretations of the data. 
-                                        These data models can be used by researchers, policymakers, non-profits, and citizens. The front-end is developed with VueJS and for the backend, 
-                                        we decided to implement it with Flask and MongoDB. 
+                                        SafeSpot is a web application meant to provide users the optimal time to visit a business based on the venue's total capacity and current occupancy. 
+                                        Especially during the pandemic, it is crucial to ensure that one is visitng public places in a safe way and our application recognizes that. Built with 
+                                        VueJS for our front-end and a Flask / SQL back-end, SafeSpot is the perfect application to help plan your business visits. 
 								</p>
-								<a href="http://agri-works.org/" target = "_blank" class="button fit project-button">View Live Application</a>
-                                <a href="https://github.com/Hack4Impact-Boston-University/agriworks_portal" target = "_blank" class="button fit project-button">View Front-End Repo</a>
+                                <a href="https://github.com/benlague/CS411" target = "_blank" class="button fit project-button">View Code Repo</a>
                                 
-                                <a href="https://github.com/Hack4Impact-Boston-University/agriworks_platform" target = "_blank" class="button fit project-button">View Back-End Repo</a>
 
 							</div>
 						</section>
