--- a/static/spotme.html
+++ b/static/spotme.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>YelpCamp Project</title>
+		<title>SpotMe Application</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/public/assets/css/main.css" />
@@ -41,7 +41,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>YelpCamp Web Application</h2>
+							<h2>SpotMe Mobile Application</h2>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -49,14 +49,13 @@
 								<h3>About the Project</h3>
 
                                 <p>
-                                        YelpCamp is a node application that revolutionizes camping! The app allows users to rate, share and create their own custom campgrounds. 
-                                                I developed this project as a way to learn full-stack-development. The experience allowed me to learn concepts such as user authentication, 
-                                                cookies and sessions, and communication with databases on the back-end. The technologies used on this application are NodeJS, Express, MongoDB, 
-                                                HTML5, CSS, and Javascript
-                                </p>
-                                <a href="https://yelpcamp--demo.herokuapp.com/" target = "_blank" class="button fit project-button">View Project Demo</a>
+                                        SpotMe is a React Native mobile application with a NodeJS / Express back-end that attempts to revolutionize global transactions 
+                                        by providing users an opportunity to trade money in a secure, efficient, and interactive manner, 
+                                        making use of a social feed to see what all your friends are purchasing!
+								</p>
+                                <a href="https://github.com/gkang2018/SpotMeMobile" target = "_blank" class="button fit project-button">View Front-End Repo</a>
                                 
-                                <a href="https://github.com/gkang2018/YelpCamp" target = "_blank" class="button fit project-button">View Code</a>
+                                <a href="https://github.com/gkang2018/SpotMe-be" target = "_blank" class="button fit project-button">View Back-End Repo</a>
 
 							</div>
 						</section>
