--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <p>
                 A React Native mobile application that allows users to globally trade money, improving digital transactions in India/Pakistan. 
               </p>
-              <a href="/static/virtualheap.html" class="button fit"
+              <a href="/static/spotme.html" class="button fit"
                 >View Project</a
               >
             </li>
