fall 2021 website updates

--- a/index.html
+++ b/index.html
@@ -54,15 +54,14 @@
           <header class="major">
             <h2>Who am I?</h2>
             <p>
-              Hello! My name is Gagandeep Kang and I'm currently a junior
+              Hello! My name is Gagandeep Kang and I'm currently a senior
               studying Computer Science with a minor in Mathematics from Boston University.
               <br />
               <br />
               During the school year, I have the opportunity to be a part of
               Boston University's Hack4Impact Chapter, which is an organization
               that develops applications for non-profits in Boston. Within Hack4Impact, I co-founded the Junior Development team which provides
-              an opportunity for students who are interested in full-stack development to learn through a project-based model. I am also
-              the President of BU's Global App Initiative which builds mobile apps for non-profits in the local Boston community. 
+              an opportunity for students who are interested in full-stack development to learn through a project-based model. Below you can see some of the projects that I have worked on.
               <br />
               <br />
             </p>
@@ -90,7 +89,7 @@
               >
             </li>
             <li>
-              <a href="mailto: gskang@bu.edu" class="button fit" target="_blank"
+              <a href="mailto: gaganskang1@gmail.com" class="button fit" target="_blank"
                 >Email Me</a
               >
             </li>
@@ -109,16 +108,6 @@
             </p>
           </header>
           <ul class="features">
-            <li class="icon fa-paper-plane">
-              <h3>Fake News</h3>
-              <p>
-                Built a Google Chrome Extension at BostonHacks that analyzes the
-                authenticity of a news article.
-              </p>
-              <a href="/static/fakenews.html" class="button fit"
-                >View Project</a
-              >
-            </li>
             <li class="icon solid fa-laptop">
               <h3>Agriworks</h3>
               <p>
@@ -140,11 +129,21 @@
               >
             </li>
             <li class="icon fa-money-bill-wave">
-              <h3>SpotMe</h3>
+              <h3>NodPay</h3>
               <p>
-                A React Native mobile application that allows users to globally trade money, improving digital transactions in India/Pakistan. 
+                A React Native mobile application that promotes global digital transactions
               </p>
-              <a href="/static/spotme.html" class="button fit"
+              <a href="/static/nodpay.html" class="button fit"
+                >View Project</a
+              >
+            </li>
+            <li class="icon fa-paper-plane">
+              <h3>Fake News</h3>
+              <p>
+                Built a Google Chrome Extension at BostonHacks that analyzes the
+                authenticity of a news article.
+              </p>
+              <a href="/static/fakenews.html" class="button fit"
                 >View Project</a
               >
             </li>
