--- a/static/nodpay.html
+++ b/static/nodpay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>SpotMe Application</title>
+		<title>NodPay Application</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/public/assets/css/main.css" />
@@ -41,7 +41,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>SpotMe Mobile Application</h2>
+							<h2>NodPay Mobile Application</h2>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
@@ -49,13 +49,13 @@
 								<h3>About the Project</h3>
 
                                 <p>
-                                        SpotMe is a React Native mobile application with a NodeJS / Express back-end that attempts to revolutionize global transactions 
+                                        NodPay is a React Native mobile application with a NodeJS / Express back-end that attempts to revolutionize global transactions 
                                         by providing users an opportunity to trade money in a secure, efficient, and interactive manner, 
                                         making use of a social feed to see what all your friends are purchasing!
 								</p>
-                                <a href="https://github.com/gkang2018/SpotMeMobile" target = "_blank" class="button fit project-button">View Front-End Repo</a>
+                                <a href="https://github.com/NodPay/NodPayApp" target = "_blank" class="button fit project-button">View Front-End Repo</a>
                                 
-                                <a href="https://github.com/gkang2018/SpotMe-be" target = "_blank" class="button fit project-button">View Back-End Repo</a>
+                                <a href="https://github.com/NodPay/NodPayServer" target = "_blank" class="button fit project-button">View Back-End Repo</a>
 
 							</div>
 						</section>
